--- a/SchoolProject/Views/Teacher/List.cshtml
+++ b/SchoolProject/Views/Teacher/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<SchoolProject.Models.Teacher>
 @{
-    ViewBag.Title = "teachers List ";
+    ViewBag.Title = "Teachers List ";
 }
 
 <h2>List of teachers</h2>
